# herocore

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  run_as_user.sh
.devcontainer/: README.md  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yaml
cmake/: DownloadUserver.cmake  get_cpm.cmake
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
containers/tm/: Dockerfile  config_tm  run.sh
containers/xaseco/: Dockerfile  run.sh
proto/handlers/: hello.proto
services/: .clang-format  CMakeLists.txt  CMakePresets.json  Makefile
services/include/: CMakeLists.txt
services/include/async/: CMakeLists.txt  async_task.hpp  generator.h
services/include/async/tests/: CMakeLists.txt  async_test.cpp
services/include/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/: greeting.cpp  greeting.hpp  greeting_benchmark.cpp  greeting_test.cpp  hello.cpp  hello.hpp  hello_grpc.cpp  hello_grpc.hpp  main.cpp
src/lib/: request_to_server.cpp
tests/: conftest.py  pytest.ini  test_basic.py  test_grpc.py
